# PySide6QCustomPlot2

./: .gitignore  CMakeLists.txt  README.md  demo.py  pyproject.toml
src/: bindings.xml  qcustomplot.cpp  qcustomplot.h
src-python/PySide6QCustomPlot2/: __init__.py
tools/: genPyiReWhl.py  genWhl.py  install.py
